fixed double scroll bar

--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -36,3 +36,9 @@ body {
 .bg2 {
     background: linear-gradient(85.91deg, rgba(0, 24, 254, .4) -19%, rgba(0, 0, 0, .4) 53.51%, rgba(255, 0, 0, .356) 118.99%);
 }
+
+@media screen and (min-width: 768px) {
+    .scroll_snapping {
+        max-height: none;
+    }
+}
